syntax = "proto3";

package crescent.amm.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "crescent/amm/v1beta1/amm.proto";

option go_package = "github.com/crescent-network/crescent/v5/x/amm/types";

service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/crescent/amm/v1beta1/params";
  }
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}
